--- a/CsoundForAndroid/CsoundForAndroid/CsoundApplication/src/main/res/xml/settings.xml
+++ b/CsoundForAndroid/CsoundForAndroid/CsoundApplication/src/main/res/xml/settings.xml
@@ -8,7 +8,13 @@
     <ListPreference
         android:title="Screen Layout"
         android:key="screenLayout"
-        android:defaultValue="4"
+        android:defaultValue="5"
         android:entries="@array/layoutEntries"
         android:entryValues="@array/layoutValues" />
+    <ListPreference
+        android:title="Audio Driver"
+        android:key="audioDriver"
+        android:defaultValue="1"
+        android:entries="@array/audioDriverEntries"
+        android:entryValues="@array/audioDriverValues" />
 </PreferenceScreen>
