--- a/CsoundForAndroid/CsoundForAndroid/CsoundApplication/src/main/res/menu/menu.xml
+++ b/CsoundForAndroid/CsoundForAndroid/CsoundApplication/src/main/res/menu/menu.xml
@@ -5,12 +5,29 @@
             <item android:id="@+id/itemTrapped" android:visible="true" android:titleCondensed="Trapped in Convert" android:title="Trapped in Convert, Richard Boulanger" android:enabled="true"/>
             <item android:id="@+id/itemDroneIV" android:visible="true" android:titleCondensed="Drone IV" android:title="Drone IV, Michael Gogins" android:enabled="true"/>
             <item android:id="@+id/itemLuaScoregen" android:visible="true" android:titleCondensed="Lua score generator" android:enabled="true" android:title="Lua score generator, Michael Gogins" />
-            <item android:id="@+id/itemLindenmayerCanvas" android:visible="true" android:titleCondensed="Lindenmayer Canvas" android:enabled="true" android:title="Lindenmayer Canvas, Michael Gogins"/>
+            <item
+                android:id="@+id/itemMessage"
+                android:enabled="true"
+                android:title="Message from Another Planet, Jacob Joaquin and Michael Gogins"
+                android:titleCondensed="Message"
+                android:visible="true" />
             <!-- n<item android:id="@+id/itemPoustinia" android:visible="true" android:titleCondensed="Poustinia" android:enabled="true" android:title="Poustinia, Michael Gogins"/> -->
             <item android:id="@+id/itemChimePad" android:visible="true" android:titleCondensed="Chime Pad" android:enabled="true" android:title="Chime Pad, Art Hunkins" />
             <item android:id="@+id/itemKoanI" android:visible="true" android:titleCondensed="Csound Koan I" android:title="Csound Koan I, Ian McCurdy" android:enabled="true" />
             <item android:id="@+id/itemPartikkel" android:visible="true" android:titleCondensed="Partikkel" android:enabled="true" android:title="Partikkel, Peiman Khosravi" />
             <item android:id="@+id/itemXanadu" android:visible="true" android:titleCondensed="Xanadu" android:enabled="true" android:title="Xanadu, Joseph Kung"/>
+            <item
+                android:id="@+id/itemBuiltinChannels"
+                android:enabled="true"
+                android:title="Print built-in channels, Michael Gogins"
+                android:titleCondensed="Built-in Channels"
+                android:visible="true" />
+            <item
+                android:id="@+id/itemModulatedDelay"
+                android:enabled="true"
+                android:title="Modulated delay line, Michael Gogins"
+                android:titleCondensed="Modulated delay"
+                android:visible="true" />
         </menu>
     </item>
     <item android:id="@+id/itemGuide" android:visible="true" android:title="@string/guide" android:enabled="true" android:menuCategory="container" android:orderInCategory="1"></item>
