--- a/CsoundForAndroid/CsoundForAndroid/CsoundApplication/src/main/res/values/styles.xml
+++ b/CsoundForAndroid/CsoundForAndroid/CsoundApplication/src/main/res/values/styles.xml
@@ -5,8 +5,9 @@
         <item name="android:paddingRight">15dp</item>
     </style>
     <style name="csoundButtonStyle" parent="@android:style/Widget.Button.Small">
-        <item name="android:padding">0dp</item>
-        <item name="android:textSize">12sp</item>  
+        <item name="android:padding">2dp</item>
+        <item name="android:textSize">12sp</item>
+        <item name="android:backgroundTint">#aaabaa</item>
         <item name="android:layout_marginLeft">-3dip</item>
     	<item name="android:layout_marginRight">-3dip</item>
     </style>
@@ -15,5 +16,8 @@
         <item name="android:dividerHeight">0dp</item>
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
-        </style>    
+    </style>
+    <style name="csoundTheme" parent="android:Theme.DeviceDefault">
+        <item name = "android:backgroundTint">#000000</item>
+    </style>
 </resources>
