--- a/CsoundForAndroid/CsoundForAndroid/CsoundApplication/src/main/res/xml/filepaths.xml
+++ b/CsoundForAndroid/CsoundForAndroid/CsoundApplication/src/main/res/xml/filepaths.xml
@@ -1,7 +1,14 @@
 <paths xmlns:android="http://schemas.android.com/apk/res/android">
+    <root-path name="root" path="." />
+    <cache-path name="cache" path="/" />
+    <files-path name="files" path="." />
+    <files-path name="my_assets" path="assets"/>
+    <files-path path="rawwaves" name="rawwaves" />
+    <files-path path="samples" name="samples" />
+    <external-files-path name="my_external" path="."/>
     <external-files-path name="my_csd" path="csd/"/>
     <external-files-path name="my_html" path="html/"/>
     <external-files-path name="my_downloads" path="Download/"/>
     <external-files-path name="my_music" path="Music/"/>
-    <files-path path="rawwaves/" name="rawwaves" />
+    <external-files-path name="my_csoundforandroid" path="Music/CsoundForAndroid/"/>
 </paths>
