Not using fragments (#73).

--- a/CsoundForAndroid/Silence/app/src/main/res/layout/activity_main.xml
+++ b/CsoundForAndroid/Silence/app/src/main/res/layout/activity_main.xml
@@ -22,27 +22,55 @@
         <android.support.design.widget.TabItem
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Editor" android:id="@+id/editor_tab" />
+                android:text="Editor"/>
         <android.support.design.widget.TabItem
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="HTML" android:id="@+id/html_tab" />
+                android:text="Messages"/>
         <android.support.design.widget.TabItem
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Messages" android:id="@+id/messages_tab" />
+                android:text="HTML"/>
         <android.support.design.widget.TabItem
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Help" android:id="@+id/csound_help.tab" />
+                android:text="Help"/>
         <android.support.design.widget.TabItem
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Portal" android:id="@+id/csound_portal.tab" />
+                android:text="Portal"/>
     </android.support.design.widget.TabLayout>
-    <TextView
-            android:id="@+id/sample_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Hello World!" />
+    <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+        <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textMultiLine"
+                android:ems="10"
+                android:id="@+id/editor"/>
+        <TextView
+                android:text="TextView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/messages"/>
+        <WebView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/html_view"/>
+        <WebView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/help_view"/>
+        <WebView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/portal_view"/>
+        <TextView
+                android:id="@+id/sample_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Hello World!"/>
+    </LinearLayout>
 </LinearLayout>
