--- a/CsoundForAndroid/CsoundForAndroid/CsoundApplication/src/main/res/layout/main.xml
+++ b/CsoundForAndroid/CsoundForAndroid/CsoundApplication/src/main/res/layout/main.xml
@@ -17,6 +17,12 @@
         android:id="@+id/toolbar">
     </android.support.v7.widget.Toolbar>
 
+    <SearchView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:imeOptions="actionGo|actionNext"
+        android:inputType="text" />
+
     <android.support.design.widget.TabLayout
         android:id="@+id/tab_layout"
         android:layout_width="wrap_content"
