--- a/CsoundForAndroid/CsoundForAndroid/CsoundApplication/src/main/res/values/arrays.xml
+++ b/CsoundForAndroid/CsoundForAndroid/CsoundApplication/src/main/res/values/arrays.xml
@@ -1,17 +1,2 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
-    <string-array name="layoutValues">
-        <item>1</item>
-        <item>2</item>
-        <item>3</item>
-        <item>4</item>
-        <item>5</item>
-    </string-array>
-    <string-array name="layoutEntries">
-        <item>Message console</item>
-        <item>HTML</item>
-        <item>HTML with message console</item>
-        <item>Widgets</item>
-        <item>Widgets with message console</item>
-    </string-array>
-</resources>
+<resources></resources>
