--- a/CsoundForAndroid/CsoundForAndroid/CsoundApplication/src/main/res/menu/menu.xml
+++ b/CsoundForAndroid/CsoundForAndroid/CsoundApplication/src/main/res/menu/menu.xml
@@ -56,6 +56,12 @@
                 android:title="Modulated delay line, Michael Gogins"
                 android:titleCondensed="Modulated delay"
                 android:visible="true" />
+            <item
+                android:id="@+id/itemScrims"
+                android:enabled="true"
+                android:title="Scrims"
+                android:titleCondensed="Scrims"
+                android:visible="true" />
         </menu>
     </item>
     <item android:id="@+id/itemGuide" android:visible="true" android:title="@string/guide" android:enabled="true" android:menuCategory="container" android:orderInCategory="1"></item>
